# fastaugment

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  augment.py  dataug.py  example.py  fast_augment.py  pytorch.Dockerfile  tensorflow.Dockerfile  test.py
.github/workflows/: build.yml  build_and_push.yml  push_docker.yml
pytorch/: example.py  setup.py  test.py
pytorch/fast_augment_torch/: __init__.py
src/: augment.cpp  augment.cu  augment.h  kernel_base.hpp  pytorch.cpp  tensorflow.cpp
tensorflow/: CMakeLists.txt  example.py  fast_augment.py  test.py
